syntax = "proto3";

package go.micro.service.user;

service UserCenter {
	rpc Login(Request) returns (Response) {}
	rpc Register(Request) returns (Response) {}
	rpc Find(Request) returns (Response) {}
}

message Message {
	int64 phone = 1;
}

message Request {
	int64 phone = 1;
	string passwd = 2;
	string code = 3;
}

message Response {
	int64 code = 1;
	string msg = 2;
	UserInfo data = 3;
}

message UserInfo {
	int64 user_id = 1;
	int64 phone = 3;
}